--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,6 +171,12 @@ jobs:
             echo "CHANGELOG_EOF"
           } >> "${GITHUB_OUTPUT}"
 
+      - name: Delete existing release if present
+        shell: bash
+        run: gh release delete "${{ needs.prepare.outputs.release_tag }}" --yes || true
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
@@ -197,7 +203,6 @@ jobs:
           name: ${{ needs.prepare.outputs.release_tag }}
           body: ${{ steps.changelog.outputs.body }}
           target_commitish: ${{ github.sha }}
-          overwrite: true
           files: |
             dist/openpista-*.tar.gz
             dist/openpista-v*-*-*-*
